<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--多模块Pom管理:https://www.cnblogs.com/ElEGenT/p/12938773.html-->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
    </parent>

    <groupId>org.kitona</groupId>
    <artifactId>zus</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>zus</name>
    <description>zus: Java项目的脚手架</description>


    <properties>
        <revision>1.0.0-SNAPSHOT</revision>

        <java.version>17</java.version>
        <maven.version>3.8.1</maven.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!--   解决maven命令执行时控制台出现中文乱码     -->
        <argLine>-Dfile.encoding=UTF-8</argLine>
        <!--多模块pom管理插件-->
        <flatten-maven-plugin.version>1.7.0</flatten-maven-plugin.version>
        <!--脚手架插件-->
        <maven-archetype-plugin.version>3.4.1</maven-archetype-plugin.version>

        <spring-boot.version>3.3.0</spring-boot.version>
        <spring-cloud.version>2023.0.1</spring-cloud.version>
        <lombok.version>1.18.40</lombok.version>
        <orika.version>1.5.4</orika.version>
        <mybatis-plus.version>3.5.14</mybatis-plus.version>
        <spring-mybatis.version>3.0.3</spring-mybatis.version>
        <commons-lang3.version>3.19.0</commons-lang3.version>
        <commons-collections.version>4.4</commons-collections.version>
        <fastjson.version>2.0.35</fastjson.version>
        <guava.version>33.5.0-jre</guava.version>
        <slf4j.version>2.0.17</slf4j.version>
        <mapstruct-plus.version>1.4.3</mapstruct-plus.version>
        <transmittable.version>2.14.5</transmittable.version>
        <!--AST语法树-->
        <antlr4.version>4.13.2</antlr4.version>
        <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
    </properties>

    <modules>
        <module>zus-common</module>
        <module>zus-domain</module>
        <module>zus-infrastructure</module>
        <module>zus-client</module>
        <module>zus-service</module>
        <module>zus-api</module>
        <module>zus-starter</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!--====================== BOM - 强制锁定版本 ======================-->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-framework-bom</artifactId>
                <version>6.1.8</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-bom</artifactId>
                <version>${mybatis-plus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-bom</artifactId>
                <version>${slf4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!--====================== 项目内部模块 Start======================-->
            <dependency>
                <groupId>org.kitona</groupId>
                <artifactId>zus-starter</artifactId>
                <version>${revision}</version>
            </dependency>

            <dependency>
                <groupId>org.kitona</groupId>
                <artifactId>zus-api</artifactId>
                <version>${revision}</version>
            </dependency>

            <dependency>
                <groupId>org.kitona</groupId>
                <artifactId>zus-service</artifactId>
                <version>${revision}</version>
            </dependency>

            <dependency>
                <groupId>org.kitona</groupId>
                <artifactId>zus-domain</artifactId>
                <version>${revision}</version>
            </dependency>

            <dependency>
                <groupId>org.kitona</groupId>
                <artifactId>zus-client</artifactId>
                <version>${revision}</version>
            </dependency>

            <dependency>
                <groupId>org.kitona</groupId>
                <artifactId>zus-infrastructure</artifactId>
                <version>${revision}</version>
            </dependency>

            <dependency>
                <groupId>org.kitona</groupId>
                <artifactId>zus-common</artifactId>
                <version>${revision}</version>
            </dependency>
            <!--====================== 项目内部模块 End======================-->

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <!--=============外部工具 Start===============-->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!--解决线程池场景中上下文丢失的问题-->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>transmittable-thread-local</artifactId>
                <version>${transmittable.version}</version>
            </dependency>

            <!--字段校验工具类-->
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>

            <dependency>
                <groupId>ma.glasnost.orika</groupId>
                <artifactId>orika-core</artifactId>
                <version>${orika.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-runtime</artifactId>
                <version>${antlr4.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.linpeilie</groupId>
                <artifactId>mapstruct-plus-pom</artifactId>
                <version>${mapstruct-plus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--=============外部工具 End===============-->

            <!--============测试相关依赖 Start================-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot.version}</version>
                <scope>test</scope>
            </dependency>
            <!--============测试相关依赖 End================-->
        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <!--mapstruct-processor 用于在 build 期间生成映射器具体实现代码。-->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.github.linpeilie</groupId>
                            <artifactId>mapstruct-plus-processor</artifactId>
                            <version>${mapstruct-plus.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!--多模块pom管理插件-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <!--resolveCiFriendliesOnly 模式只解析特定的 CI 友好变量（如 ${revision}, ${sha1}, ${changelist}），但不会解析普通的 Maven 属性。-->
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten-clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--脚手架生成插件-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-archetype-plugin</artifactId>
                <version>${maven-archetype-plugin.version}</version>
                <configuration>
                    <propertyFile>archetype.properties</propertyFile>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
